# radhas-kitchen

./: .gitignore  PRIVACY.md  README.md  bun.lockb  eslint.config.mjs  next.config.mjs  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/workflows/: api.yml  build.yml  deploy.yml
prisma/: schema.prisma
proto/: auth.proto  health.proto  jobs.proto
src-api/: .dockerignore  Cargo.toml  Dockerfile
src-api/migrations/: 20240512030255_uuid_to_text.sql  20240512031508_non_null_ids.sql  20240512122657_remove_token_id.sql
src-api/src/: main.rs  prelude.rs
src-api/src/model/: token.rs  user.rs
src-api/src/routes/auth/: error.rs  mod.rs  model.rs  route.rs
src-api/src/routes/user/: error.rs  model.rs  route.rs
src-grpc/: Cargo.toml  Dockerfile  build.rs
src-grpc/migrations/: 20240512022313_init.sql  20240513175618_user_displayname.sql  20240515211606_job_table.sql  20240516121253_rename_userkind.sql  20240516150637_user_types.sql  20240516154501_jobs_remap.sql  20240516155022_bad_copilot.sql  20240517130128_jobs_rename.sql  20240517134321_jobs_created.sql  20240517153137_no_name_default.sql
src-grpc/proto/: auth.proto  jobs.proto
src-grpc/src/: error.rs  main.rs  prelude.rs  proto.rs
src-grpc/src/model/: mod.rs
src-grpc/src/services/: auth.rs  health.rs  jobs.rs  mod.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  proto.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/[...reroute]/: route.ts
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/ui/: background-beams.tsx  button.tsx  form.tsx  input.tsx  label.tsx  loginform.tsx  select.tsx  spinner.tsx
src/protogen/: auth.ts  auth_grpc_web_pb.js  auth_pb.d.ts  jobs.ts  jobs_grpc_web_pb.js  jobs_pb.d.ts
src/protogen/google/protobuf/: empty.ts
src/utils/: async.tsx  cn.ts
src/utils/auth/: context.tsx  index.ts  index.tsx
src/utils/reapi/: index.ts  user.ts
