[package]
name = "rk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
cuid2 = "0.1.2"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = { version = "0.4.21", features = ["std"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sha256 = "1.5.0"
skuld = { git = "https://github.com/onlycs/asgard", version = "0.1.0" }
sqlx = { version = "0.7.4", features = [
	"runtime-tokio",
	"tls-native-tls",
	"postgres",
	"time",
	"uuid",
] }
thiserror = { git = "https://github.com/onlycs/thiserror", version = "1.0.58" }
time = { version = "0.3.36", features = ["serde"] }
