[package]
name = "radhas-kitchen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "applib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
tonic-build = "0.11"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.11", features = ["gzip", "tls", "tls-roots"] }
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.21", features = ["std"] }
skuld = { git = "https://github.com/onlycs/asgard" }
thiserror = { git = "https://github.com/onlycs/thiserror", version = "1.0.58" }
android_logger = "0.13.3"

[profile.dev]
opt-level = 0
